--- a/app/src/main/res/layout/promotion_code_dialog.xml
+++ b/app/src/main/res/layout/promotion_code_dialog.xml
@@ -63,7 +63,7 @@
         android:layout_marginTop="@dimen/base_margin"
         android:gravity="center"
         android:text="@string/REFERRAL_ADDCOUPON_TC_LINK"
-        android:textColor="?textColorLink" />
+        android:textColor="?android:textColorLink" />
 
     <Button
         android:id="@+id/bottomSheetAddPromotionCodeButton"
