--- a/app/src/main/res/drawable/chat_selectable.xml
+++ b/app/src/main/res/drawable/chat_selectable.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?textColorLink">
+    android:color="?android:textColorLink">
     <item>
         <selector android:exitFadeDuration="@android:integer/config_mediumAnimTime">
             <item android:state_selected="true">
                 <shape>
                     <corners android:radius="@dimen/chat_message_corner_radius" />
-                    <solid android:color="?textColorLink" />
+                    <solid android:color="?android:textColorLink" />
                 </shape>
             </item>
             <item>
@@ -14,7 +14,7 @@
                     <corners android:radius="@dimen/chat_message_corner_radius" />
                     <stroke
                         android:width="1dp"
-                        android:color="?textColorLink" />
+                        android:color="?android:textColorLink" />
                     <solid android:color="?android:colorBackground" />
                 </shape>
             </item>
