--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -92,7 +92,7 @@
         <item name="android:textColorPrimary">@color/text_color_primary_light</item>
         <item name="android:textColorSecondary">@color/hedvig_black</item>
         <item name="colorOnSurface">?colorPrimary</item>
-        <item name="textColorLink">?android:textColorSecondary</item>
+        <item name="android:textColorLink">?android:textColorSecondary</item>
         <item name="cardElevation">0dp</item>
         <item name="strokeColor">@color/color_divider</item>
         <item name="strokeWidth">1dp</item>
