--- a/app/src/main/res/layout/view_multi_action_component.xml
+++ b/app/src/main/res/layout/view_multi_action_component.xml
@@ -6,32 +6,47 @@
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/base_margin"
     android:foreground="?selectableItemBackground"
-    app:cardCornerRadius="8dp">
+    app:cardCornerRadius="8dp"
+    tools:layout_width="150dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:minHeight="88dp">
 
+        <ImageButton
+            android:id="@+id/removeButton"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginTop="@dimen/base_margin"
+            android:layout_marginEnd="@dimen/base_margin"
+            android:contentDescription="@string/general_close_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_close_small" />
+
         <TextView
             android:id="@+id/title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/base_margin"
             android:layout_marginBottom="@dimen/base_margin"
-            android:gravity="center_vertical"
+            android:textAlignment="center"
             android:textAppearance="?textAppearanceBody1"
             android:textColor="?colorPrimary"
             app:layout_constraintBottom_toTopOf="@id/subtitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/removeButton"
             app:layout_constraintVertical_chainStyle="packed"
-            tools:text="Garage" />
+            tools:text="Very long name for a building" />
 
         <TextView
             android:id="@+id/subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/base_margin_triple"
             android:gravity="center"
             android:paddingHorizontal="@dimen/base_margin_double"
             android:textAppearance="?textAppearanceCaption"
@@ -41,15 +56,6 @@
             app:layout_constraintTop_toBottomOf="@id/title"
             tools:text="25 sqm * water" />
 
-        <ImageButton
-            android:id="@+id/removeButton"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:contentDescription="@string/general_close_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_close_small" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
