Fix multi action having the wrong submit label

--- a/app/src/main/res/layout/view_multi_action_add.xml
+++ b/app/src/main/res/layout/view_multi_action_add.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/base_margin"
@@ -32,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:text="@string/embark.multiaction.add_building_button"
+            tools:text="Add building"
             android:textAppearance="?textAppearanceBody2"
             android:textColor="?colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
