--- a/app/src/main/res/layout/view_multi_action_add.xml
+++ b/app/src/main/res/layout/view_multi_action_add.xml
@@ -8,40 +8,25 @@
     android:foreground="?selectableItemBackground"
     android:theme="@style/ThemeOverlay.Hedvig.Card.Outlined.Unfilled">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:minWidth="160dp"
         android:minHeight="88dp">
 
-        <ImageView
-            android:id="@+id/addButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/base_margin"
-            android:contentDescription="@null"
-            app:layout_constraintBottom_toTopOf="@id/title"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
-            app:srcCompat="@drawable/ic_add_circle"
-            app:tint="?colorPrimary" />
-
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:drawablePadding="@dimen/base_margin"
             android:gravity="center_vertical"
-            tools:text="Add building"
             android:textAppearance="?textAppearanceBody2"
             android:textColor="?colorPrimary"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/addButton" />
+            app:drawableTint="?colorPrimary"
+            app:drawableTopCompat="@drawable/ic_add_circle"
+            tools:text="Add building" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+    </FrameLayout>
 
 </com.google.android.material.card.MaterialCardView>
