--- a/app/src/main/res/layout/additional_buildings_row.xml
+++ b/app/src/main/res/layout/additional_buildings_row.xml
@@ -3,28 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/base_margin_double"
-    android:layout_marginBottom="@dimen/base_margin_double"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingVertical="@dimen/base_margin">
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/base_margin_double"
-        android:layout_marginTop="@dimen/base_margin_double"
-        android:layout_marginEnd="@dimen/base_margin_double"
-        android:textAppearance="?textAppearanceBody2"
+        android:textAppearance="?textAppearanceSubtitle1"
         tools:text="Garage" />
 
     <TextView
         android:id="@+id/body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginTop="@dimen/base_margin"
-        android:layout_marginEnd="@dimen/base_margin_double"
-        android:textAppearance="?textAppearanceSubtitle1"
+        android:textAppearance="?textAppearanceBody2"
         tools:text="22 kvadratmeter, indraget vatten" />
 
 </LinearLayout>
