Bonus: Fix APP-712

--- a/app/src/main/res/layout/view_multi_action_add.xml
+++ b/app/src/main/res/layout/view_multi_action_add.xml
@@ -2,11 +2,12 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/base_margin"
     android:foreground="?selectableItemBackground"
-    android:theme="@style/ThemeOverlay.Hedvig.Card.Outlined.Unfilled">
+    android:theme="@style/ThemeOverlay.Hedvig.Card.Outlined.Unfilled"
+    tools:layout_width="160dp">
 
     <FrameLayout
         android:layout_width="match_parent"
