--- a/app/src/main/res/drawable/ic_chat_black_ripple.xml
+++ b/app/src/main/res/drawable/ic_chat_black_ripple.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple android:color="?colorControlHighlight" xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_chat" />
+    <item android:drawable="@drawable/ic_round_chat_black" />
 </ripple>
