--- a/app/src/main/res/layout/menu_chat_icon.xml
+++ b/app/src/main/res/layout/menu_chat_icon.xml
@@ -9,9 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/ic_chat_ripple"
+        android:background="@drawable/ic_chat_black_ripple"
         android:contentDescription="@string/DASHBOARD_OPEN_CHAT"
-        app:srcCompat="@drawable/ic_chat"
         app:tint="@android:color/transparent"
         app:tintMode="src_in" />
 </FrameLayout>
