Add soft input mode to bottomsheet dialog theme to show all content in bottomsheet when keyboard is shown

--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -20,6 +20,7 @@
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:windowIsFloating">false</item>
         <item name="materialButtonStyle">@style/Hedvig.Button</item>
+        <item name="android:windowSoftInputMode">adjustResize</item>
     </style>
 
     <style name="Hedvig.Theme.BottomSheet" parent="Widget.MaterialComponents.BottomSheet">
