--- a/app/src/main/res/layout/fragment_insurance.xml
+++ b/app/src/main/res/layout/fragment_insurance.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
+        android:paddingTop="?actionBarSize"
         android:paddingBottom="@dimen/base_margin_double"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
