--- a/app/src/main/res/layout/fragment_key_gear.xml
+++ b/app/src/main/res/layout/fragment_key_gear.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:orientation="vertical"
+    android:paddingTop="?actionBarSize"
     android:paddingBottom="@dimen/base_margin_double"
     tools:context=".feature.keygear.ui.tab.KeyGearFragment">
 
