--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
+    android:paddingTop="?actionBarSize"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:context=".feature.profile.ui.tab.ProfileFragment"
     tools:itemCount="3"
