Fix a few more lint warnings

--- a/app/src/main/res/layout/chat_message_user_giphy.xml
+++ b/app/src/main/res/layout/chat_message_user_giphy.xml
@@ -12,7 +12,8 @@
         android:layout_marginTop="@dimen/base_margin"
         android:layout_marginEnd="@dimen/base_margin_double"
         android:background="@drawable/background_rounded_corners"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
         <ImageView
             android:id="@+id/messageImage"
