--- a/app/src/main/res/layout/document.xml
+++ b/app/src/main/res/layout/document.xml
@@ -21,9 +21,10 @@
             android:id="@+id/icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/base_margin_double"
             android:contentDescription="@null"
-            android:paddingEnd="@dimen/base_margin_double"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_document" />
@@ -50,7 +51,7 @@
             android:textAppearance="?textAppearanceBody2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/icon"
+            app:layout_constraintStart_toStartOf="@id/text"
             app:layout_constraintTop_toBottomOf="@id/text"
             tools:text="Insurance letter" />
 
