--- a/app/src/main/res/layout/menu_chat_icon.xml
+++ b/app/src/main/res/layout/menu_chat_icon.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingEnd="@dimen/base_margin_double">
+    android:paddingEnd="@dimen/base_margin_double"
+    tools:ignore="RtlSymmetry">
 
     <ImageView
         android:layout_width="wrap_content"
