--- a/app/src/engineering/res/layout/tracking_log_activity.xml
+++ b/app/src/engineering/res/layout/tracking_log_activity.xml
@@ -10,6 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:menu="@menu/tracking_log_menu"
         app:navigationIcon="@drawable/ic_back"
         app:title="Recorded tracks" />
 
