Remove back pressed dispatcher to allow access to embark once offer is shown. Add item in overflow menu to allow discarding offer.

--- a/app/src/main/res/menu/offer_menu.xml
+++ b/app/src/main/res/menu/offer_menu.xml
@@ -20,4 +20,8 @@
         android:icon="@drawable/ic_profile"
         android:title="@string/common_signin_button_text"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/discard_offer"
+        android:title="@string/general_discard_button"
+        app:showAsAction="never" />
 </menu>
