--- a/app/src/main/res/layout/offer_fact_area.xml
+++ b/app/src/main/res/layout/offer_fact_area.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.hedvig.app.ui.view.ExpandableContentView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="?android:colorBackground"
     android:id="@+id/expandableContentView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/base_margin_triple">
+    android:background="?android:colorBackground">
 
     <LinearLayout
         android:id="@+id/expandableContent"
