--- a/app/src/main/res/layout/offer_header.xml
+++ b/app/src/main/res/layout/offer_header.xml
@@ -88,18 +88,19 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/startDateContainer"
-                style="?materialButtonTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/base_margin_double"
-                android:background="@drawable/background_rounded_corners_ripple"
-                android:padding="@dimen/base_margin">
+                android:paddingVertical="@dimen/base_margin_double"
+                android:layout_marginHorizontal="@dimen/base_margin"
+                android:paddingHorizontal="@dimen/base_margin"
+                android:layout_marginTop="@dimen/base_margin_quintuple"
+                android:background="@drawable/background_rounded_corners_ripple">
 
                 <TextView
                     android:id="@+id/startDateLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawablePadding="@dimen/base_margin"
+                    android:drawablePadding="@dimen/base_margin_double"
                     android:gravity="center_vertical"
                     android:text="@string/OFFER_ACCESS_DATE"
                     android:textAppearance="?textAppearanceBody1"
@@ -114,7 +115,6 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/base_margin_double"
-                    android:layout_marginEnd="@dimen/base_margin_double"
                     android:gravity="center_vertical|end"
                     android:textAlignment="textEnd"
                     android:textAppearance="?textAppearanceBody1"
@@ -132,7 +132,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/base_margin_double"
-                android:layout_marginTop="@dimen/base_margin_quadruple"
+                android:layout_marginTop="@dimen/base_margin_quintuple"
                 android:layout_marginBottom="@dimen/base_margin"
                 android:text="@string/OFFER_SIGN_BUTTON"
                 app:iconGravity="textEnd"
