Adjust offer text colors

--- a/app/src/main/res/layout/list_text_item.xml
+++ b/app/src/main/res/layout/list_text_item.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
-        android:textAppearance="?textAppearanceBody1"
+        android:textAppearance="?textAppearanceSubtitle1"
         tools:text="Address" />
 
     <TextView
