--- a/app/src/main/res/values-night/colors_dark.xml
+++ b/app/src/main/res/values-night/colors_dark.xml
@@ -36,5 +36,6 @@
     <item name="blur_summer_sky" type="color">#cbb583</item>
     <item name="blur_fall_sunset" type="color">#c6ad8a</item>
     <item name="blur_spring_fog" type="color">#ec955f</item>
+    <item name="default_insurance_card" type="color">#505050</item>
 
 </resources>
