--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -47,4 +47,5 @@
     <item name="blur_summer_sky" type="color">#efeac6</item>
     <item name="blur_fall_sunset" type="color">#e2ccce</item>
     <item name="blur_spring_fog" type="color">#f8b992</item>
+    <item name="default_insurance_card" type="color">#eaeaea</item>
 </resources>
