Make offer transition more stable. Use backgroundColor for root view to avoid flickering when running recyclerview enter animation.

--- a/app/src/main/res/layout/activity_offer.xml
+++ b/app/src/main/res/layout/activity_offer.xml
@@ -5,7 +5,7 @@
     android:id="@+id/offerRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_summer_sky"
+    android:background="@color/colorBackground"
     tools:context=".feature.offer.ui.OfferActivity">
 
     <ProgressBar
