--- a/app/src/main/res/layout/failed_payments_card.xml
+++ b/app/src/main/res/layout/failed_payments_card.xml
@@ -8,7 +8,8 @@
     android:layout_marginStart="@dimen/base_margin_double"
     android:layout_marginTop="@dimen/base_margin_double"
     android:layout_marginEnd="@dimen/base_margin_double"
-    android:theme="@style/ThemeOverlay.Hedvig.WarningCard">
+    android:theme="@style/ThemeOverlay.Hedvig.WarningCard"
+    style="@style/Hedvig.Theme.InfoCard">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
