--- a/app/src/main/res/layout/warning_card.xml
+++ b/app/src/main/res/layout/warning_card.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/base_margin_double"
-    android:theme="@style/ThemeOverlay.Hedvig.WarningCard">
+    android:theme="@style/ThemeOverlay.Hedvig.WarningCard"
+    style="@style/Hedvig.Theme.InfoCard">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
