--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -118,4 +118,10 @@
         <item name="android:paddingTop">12dp</item>
     </style>
 
+    <style name="Hedvig.Theme.InfoCard">
+        <item name="cardElevation">0dp</item>
+        <item name="strokeColor">@color/color_divider</item>
+        <item name="strokeWidth">1dp</item>
+    </style>
+
 </resources>
