--- a/app/src/main/res/layout/home_info_card.xml
+++ b/app/src/main/res/layout/home_info_card.xml
@@ -9,7 +9,8 @@
     android:layout_marginTop="@dimen/base_margin_double"
     android:layout_marginEnd="@dimen/base_margin_double"
     android:padding="@dimen/base_margin_double"
-    android:theme="@style/ThemeOverlay.Hedvig.WarningCard">
+    android:theme="@style/ThemeOverlay.Hedvig.WarningCard"
+    style="@style/Hedvig.Theme.InfoCard">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
