--- a/app/src/main/res/layout/expandable_content_view.xml
+++ b/app/src/main/res/layout/expandable_content_view.xml
@@ -25,11 +25,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/base_margin_double"
-        android:layout_marginTop="@dimen/base_margin_quadruple"
+        android:layout_marginTop="@dimen/base_margin"
         android:text="@string/OFFER_HOUSE_SUMMARY_BUTTON_EXPAND"
         app:icon="@drawable/ic_dropdown_rotate"
         app:iconPadding="@dimen/base_margin"
-        app:layout_constraintBottom_toBottomOf="@id/expandableContentContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/expandableContentContainer" />
