--- a/app/src/main/res/drawable/ic_record.xml
+++ b/app/src/main/res/drawable/ic_record.xml
@@ -1,11 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="288dp"
-    android:height="288dp"
-    android:viewportWidth="72"
-    android:viewportHeight="72">
-  <path
-      android:pathData="M36,36m-26,0a26,26 0,1 1,52 0a26,26 0,1 1,-52 0"
-      android:strokeWidth="20"
-      android:fillColor="#DD2727"
-      android:strokeColor="#ffffff"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="72dp" android:height="72dp" android:viewportWidth="72" android:viewportHeight="72">
+    <path android:fillColor="#DD2727" android:pathData="M10 36a26 26 0 1 1 52 0 26 26 0 1 1-52 0" android:strokeWidth="20" android:strokeColor="#ffffff"/>
 </vector>
