--- a/app/src/main/res/menu/logged_in_menu_key_gear.xml
+++ b/app/src/main/res/menu/logged_in_menu_key_gear.xml
@@ -7,7 +7,7 @@
 
     <item
         android:id="@+id/insurance"
-        android:icon="@drawable/ic_insurance"
+        android:icon="@drawable/ic_insurance_bottom_navigation"
         android:title="@string/insurances_tab.title" />
 
     <item
