Revert "APP-966: Feature/show claim status"

--- a/app/src/main/res/layout/home_start_claim_contained.xml
+++ b/app/src/main/res/layout/home_start_claim_contained.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/base_margin_double"
-    android:layout_marginTop="18dp"
+    android:layout_marginTop="@dimen/base_margin_quintuple"
     android:layout_marginEnd="@dimen/base_margin_double"
     android:text="@string/home_tab.claim_button_text" />
 
