--- a/app/src/main/res/layout/home_start_claim_outlined.xml
+++ b/app/src/main/res/layout/home_start_claim_outlined.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/base_margin_double"
-    android:layout_marginTop="@dimen/base_margin_triple"
+    android:layout_marginTop="18dp"
     android:layout_marginEnd="@dimen/base_margin_double"
     android:text="@string/home_tab.claim_button_text" />
