Change home claim button to new copy

--- a/app/src/main/res/layout/home_start_claim_contained.xml
+++ b/app/src/main/res/layout/home_start_claim_contained.xml
@@ -6,5 +6,5 @@
     android:layout_marginStart="@dimen/base_margin_double"
     android:layout_marginTop="18dp"
     android:layout_marginEnd="@dimen/base_margin_double"
-    android:text="@string/home_tab.claim_button_text" />
+    android:text="@string/home.open_claim.start_new_claim_button" />
 
