Revert "Merge pull request #768 from HedvigInsurance/fix/APP_467_center_align_embark_action_button"
This reverts commit f06834b67f5fd0f943f0638dcb61933f4411c0ab, reversing
changes made to c462eaba5ef33a802ab2ad91327a91b4453d2de2.

--- a/app/src/main/res/layout/fragment_embark_select_action.xml
+++ b/app/src/main/res/layout/fragment_embark_select_action.xml
@@ -38,13 +38,19 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:text="Continue to offer" />
 
-    <androidx.compose.ui.platform.ComposeView
-        android:id="@+id/actions_compose_view"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/actions"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/base_margin"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:spanCount="2"
+        tools:itemCount="2"
+        tools:listitem="@layout/embark_select_action_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
