Fix pr comments. Add feature flag.

--- a/app/src/main/res/layout/previous_or_external_insurer_fragment.xml
+++ b/app/src/main/res/layout/previous_or_external_insurer_fragment.xml
@@ -82,6 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/base_margin_double"
+        android:enabled="false"
         android:text="@string/onboarding_norway_current_insurer.bottom_sheet_continue_button"
         app:layout_constraintBottom_toBottomOf="parent" />
 
